--- a/tree/master/cloud/src/solution/Microsoft.Legal.MatterCenter.Web/wwwroot/css/viewspecific/popupStyles.css
+++ b/tree/master/cloud/src/solution/Microsoft.Legal.MatterCenter.Web/wwwroot/css/viewspecific/popupStyles.css
@@ -107,7 +107,7 @@
     -ms-word-wrap: break-word;
     font-family: "Segoe UI", Calibri, "Times New Roman";
     font-size: 0.875em;
-    height: 165px;
+    height: 155px;
     line-height: 11pt;
     overflow-x: hidden;
     overflow-y: auto;
